[project]
name = "tasknexus-feishu-plugin"
version = "0.1.0"
description = "Feishu (飞书) channel plugin for TaskNexus"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TaskNexus Team"}
]
requires-python = ">=3.10"
dependencies = [
    "lark-oapi>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/TaskNexus/tasknexus-feishu-plugin.git"

[project.entry-points."tasknexus.plugins"]
feishu = "tasknexus_feishu:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
